fixed body overflow

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -38,7 +38,7 @@
 .whyWe {
   margin-top: 25vh;
   width: 100vw;
-  height: 50vh;
+  height: 40vh;
   text-align: center;
 
   .underline {
