--- a/scss/base.scss
+++ b/scss/base.scss
@@ -11,6 +11,9 @@ html {
   font-size: 62.5%; //62.5% = 10px, it makes working with rem more easier
   color: var(--color-black);
 }
+body {
+  overflow-x: hidden;
+}
 
 *,
 *:before,
